Properly check errors during authentication to avoid falling into an infinite loop.

BUG:203715

svn path=/trunk/KDE/kdepimlibs/; revision=1074158